# taller_final

./: .gitignore  README.md  makefile
backend/: .env.template  .gitignore  README.md  docker-compose.yml  jest.config.ts  makefile  package.json  pnpm-lock.yaml  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.ts
document_exporter_service/: requirements.txt
excel_service/: requirements.txt
frontend/: .gitignore  README.md  angular.json  components.d.ts  docker-compose.yaml  makefile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend_dashboard/: README.md  angular.json  makefile  package-lock.json  package.json  tailwind.config.js
frontend_eccomerce/: .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.js
logger/: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yml  makefile  package-lock.json  package.json  tsconfig.json
task/: pyproject.toml
task/src/: main.py  run.py
task/src/config/: db_config.py
task/src/controller/: task_controller.py
task/src/dto/: create_todo_dto.py
task/src/models/: task_model.py
task/src/routes/: app_route.py  task_route.py
task/src/service/: task.py  task_service.py
task/task/app/: main.py  run.py
task/task/app/config/: db.py
task/task/app/controller/: task.controller.py
task/task/app/dto/: create_todo.py
task/task/app/models/: db.py  task.py
task/task/app/routes/: app.py  task.py
task/task/app/service/: task.py
task_service/: .dockerignore  docker-compose.yaml  makefile
(+255 files in other folders)
