[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["cedricnator <c.kirmayr01@ufromail.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
